# Metrics

./: .gitignore  ADR_001.md  README.md  docker-compose.yaml  evaluation.md  ncg metrics collection.postman_collection.json
api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  run.py  seed.py  start.py
api/app/: main.py
api/app/api/v1/: api.py  auth.py  metrics.py
api/app/core/: config.py  database.py  metric_events.py  security.py
api/app/dependencies/: app_token.py  auth.py
api/app/models/: __init__.py  app_token.py  metric_event.py  refresh_token_blacklist.py  user.py
api/app/models/base/: TimestampMixin.py  __init__.py
api/app/repositories/: app_token_repository.py  metric_event_repository.py  refresh_token_blacklist_repository.py  user_repository.py
api/app/schemas/: auth.py  metrics.py
api/app/services/: auth_service.py  metric_ingest_service.py  metric_service.py
api/migrations/: env.py
api/migrations/versions/: 36d8825675f5_add_refresh_token_blacklist.py  95f02734ece2_initial_user_token_metrics_and_.py
api/tests/: conftest.py  test_api.py
sdk/: README.md  settings.gradle.kts
sdk/MetricSDK/: build.gradle.kts
sdk/MetricSDK/src/androidTest/java/com/example/metricsdk/: ExampleInstrumentedTest.java
sdk/MetricSDK/src/main/java/com/example/metricsdk/: DeviceInfoProvider.java  FlushManager.java  MetricEvent.java  MetricsSDK.java  (+3 more)
sdk/app/: build.gradle.kts
sdk/app/src/main/: AndroidManifest.xml
sdk/app/src/main/res/values/: themes.xml
sdk/app/src/main/res/values-night/: themes.xml
sdk/gradle/: libs.versions.toml
(+11 files in other folders)
